--- a/index.html
+++ b/index.html
@@ -47,19 +47,16 @@
 
 
     <ul class="SocialWrap">
-                <a href='https://twitter.com/Andytwolff'>
+                <a href='https://twitter.com/CACorbett500'>
                   <img class="social" src="img/twitter.png">
                 </a>
-                <a href='https://www.facebook.com/Andytwolff'>
+                <a href='https://www.facebook.com/andy.corbett.180'>
                   <img class="social" src="img/fb.png">
                 </a>
-                <a href='https://www.instagram.com/andytwolff'>
+                <a href='https://www.instagram.com/andymancann'>
                   <img class="social" src="img/insta.png">
                 </a>
-                <a href='https://vimeo.com/wolff'>
-                  <img class="social" src="img/vimeo.png">
-                </a>
-                <a href="mailto:andytwolff@gmail.com">
+                <a href="mailto:cacorbett500@gmail.com">
                   <img class="social" src="img/email.png">
                 </a>
     </ul>
