--- a/Contact.html
+++ b/Contact.html
@@ -60,6 +60,7 @@
 
 </div>
 
+<div class="NEW2">
     <div class="BREAKTOP"></div>
 
     <div class="CONTACT">
@@ -106,6 +107,7 @@
         <br>
         Charles A Corbett 2017 &copy
       </footer>
+    </div>
 </div>
 
 <script>
