--- a/index.html
+++ b/index.html
@@ -16,53 +16,44 @@
 
 
 <body id="TOP">
+  <div class="sidebar">
 
-
-
-
-<div class="sidebar">
-
-<a>
-        <img class="LOGO1" src="img/LOGO.png">
-</a>
-
-
-  <div id="NAVMENU">
-      <div class="nav-mobile-wrap">
-       <a class="MENUITEM" href="index.html">Portfolio</a> <span></span>
-       <a class="MENUITEM" href="Written.html">Written</a> <span></span>
-       <a class="MENUITEM" href="Instagram.html">Instagram</a> <span></span>
-       <a class="MENUITEM" href="About.html">About</a> <span></span>
-       <a class="MENUITEM" href="Contact.html">Contact</a> <span></span>
+    <a><img class="LOGO1" src="img/LOGO.png"></a>
+    <div id="NAVMENU">
+        <div class="nav-mobile-wrap">
+          <a class="MENUITEM" href="index.html">Portfolio</a> <span></span>
+          <a class="MENUITEM" href="Written.html">Written</a> <span></span>
+          <a class="MENUITEM" href="Instagram.html">Instagram</a> <span></span>
+          <a class="MENUITEM" href="About.html">About</a> <span></span>
+          <a class="MENUITEM" href="Contact.html">Contact</a> <span></span>
+        </div>
       </div>
-  </div>
-          <a class="toggle-nav">
-            <div id="nav-icon3">
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
-            </div>
-          </a>
-</div>
+            <a class="toggle-nav">
+              <div id="nav-icon3">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+            </a>
+          </div>
 
 
-    <ul class="SocialWrap">
-                <a href='https://twitter.com/CACorbett500'>
-                  <img class="social" src="img/twitter.png">
-                </a>
-                <a href='https://www.facebook.com/andy.corbett.180'>
-                  <img class="social" src="img/fb.png">
-                </a>
-                <a href='https://www.instagram.com/andymancann'>
-                  <img class="social" src="img/insta.png">
-                </a>
-                <a href="mailto:cacorbett500@gmail.com">
-                  <img class="social" src="img/email.png">
-                </a>
-    </ul>
-
-</div>
+          <ul class="SocialWrap">
+            <a href='https://twitter.com/CACorbett500'>
+              <img class="social" src="img/twitter.png">
+            </a>
+            <a href='https://www.facebook.com/andy.corbett.180'>
+              <img class="social" src="img/fb.png">
+            </a>
+            <a href='https://www.instagram.com/andymancann'>
+              <img class="social" src="img/insta.png">
+            </a>
+            <a href="mailto:cacorbett500@gmail.com">
+              <img class="social" src="img/email.png">
+            </a>
+          </ul>=
+      </div>
 
 
 
@@ -160,9 +151,6 @@
               </div>
           </div>
     </a>
-
-
-
 
     <div class="BLOCK2">
     <div class="BREAKTOP"></div>
